--- a/pom.xml
+++ b/pom.xml
@@ -37,16 +37,21 @@
 
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>2.2.7.RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
             <version>4.1</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-devtools</artifactId>-->
-<!--            <scope>runtime</scope>-->
-<!--            <optional>true</optional>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
 
         <!-- annotation processors-->
         <dependency>
@@ -60,6 +65,7 @@
             <version>${org.projectlombok.version}</version>
             <scope>provided</scope>
         </dependency>
+
 
         <!--JMS Dep-->
         <dependency>
@@ -76,6 +82,7 @@
             <artifactId>activemq-broker</artifactId>
             <version>5.15.13</version>
         </dependency>
+
 
         <!--databases-->
         <dependency>
