--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,12 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <!-- Generating commit information's for Actuator-->
+            <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+                <version>4.0.0</version>
+            </plugin>
             <!-- Jacoco Code Coverage -->
             <plugin>
                 <groupId>org.jacoco</groupId>
