--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
+#Actuator
 management.endpoints.web.exposure.include=*
+info.app.encoding=UTF-8
+info.app.java.source=1.8
+info.app.java.target=1.8
 
