--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
