--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
         </dependency>
+<!--Boostrap-->
+    <dependency>
+        <groupId>org.webjars</groupId>
+        <artifactId>bootstrap</artifactId>
+        <version>3.3.7-1</version>
+    </dependency>
     </dependencies>
     <build>
         <plugins>
