Added Paging for Categories

--- a/pom.xml
+++ b/pom.xml
@@ -123,12 +123,18 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
         </dependency>
-<!--Boostrap-->
+    <!--Boostrap-->
     <dependency>
         <groupId>org.webjars</groupId>
         <artifactId>bootstrap</artifactId>
         <version>3.3.7-1</version>
     </dependency>
+
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-hateoas</artifactId>
+    </dependency>
+
     </dependencies>
     <build>
         <plugins>
