--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>adrianromanski</groupId>
+    <packaging>jar</packaging>
     <artifactId>movies</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>movies</name>
@@ -17,8 +18,8 @@
     <properties>
         <jacoco.version>0.8.5</jacoco.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
         <org.projectlombok.version>1.18.12</org.projectlombok.version>
     </properties>
@@ -142,6 +143,10 @@
                 <groupId>pl.project13.maven</groupId>
                 <artifactId>git-commit-id-plugin</artifactId>
                 <version>4.0.0</version>
+                <!--Trying to satisfy heroku-->
+                <configuration>
+                    <failOnNoGitDirectory>false</failOnNoGitDirectory>
+                </configuration>
             </plugin>
             <!-- Jacoco Code Coverage -->
             <plugin>
