--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
+        <java.version>11</java.version>
         <jacoco.version>0.8.5</jacoco.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
@@ -173,8 +174,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.8.0</version>
                 <configuration>
+                    <release>11</release>
                     <source>11</source>
                     <target>11</target>
                     <annotationProcessorPaths>
