--- a/pom.xml
+++ b/pom.xml
@@ -177,8 +177,8 @@
                 <version>3.8.0</version>
                 <configuration>
                     <release>11</release>
-                    <source>11</source>
-                    <target>11</target>
+<!--                    <source>11</source>-->
+<!--                    <target>11</target>-->
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.mapstruct</groupId>
