--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,18 @@
         <version>3.3.7-1</version>
     </dependency>
 
+    <!--AOP-->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-aop</artifactId>
+        <scope>compile</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.aspectj</groupId>
+        <artifactId>aspectjweaver</artifactId>
+        <scope>compile</scope>
+    </dependency>
+
     </dependencies>
     <build>
         <plugins>
