--- a/pom.xml
+++ b/pom.xml
@@ -69,23 +69,6 @@
         </dependency>
 
 
-        <!--JMS Dep-->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jms</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.jms</groupId>
-            <artifactId>javax.jms-api</artifactId>
-            <version>2.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.activemq</groupId>
-            <artifactId>activemq-broker</artifactId>
-            <version>5.15.13</version>
-        </dependency>
-
-
         <!--databases-->
         <dependency>
             <groupId>com.h2database</groupId>
@@ -143,6 +126,11 @@
         <artifactId>aspectjweaver</artifactId>
         <scope>compile</scope>
     </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.2-jre</version>
+        </dependency>
 
     </dependencies>
     <build>
