Working on #10. Profile for Development

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-
-
 #Actuator
 management.endpoints.web.exposure.include=*
 info.app.encoding=UTF-8
 info.app.java.source=11
 info.app.java.target=11
 
-spring.h2.console.enabled=true
+spring.profiles.active=development
+
+
+
 
 
