Working on #10. Set Activation For Profile

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,9 @@
     <profiles>
         <profile>
             <id>development</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <dependencies>
                 <dependency>
                     <groupId>com.h2database</groupId>
